// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionHeader tests should render default SectionHeader correctly 1`] = `
<DocumentFragment>
  .c2 {
  font-size: 1.25rem;
  line-height: 1.875rem;
  font-weight: 500;
  font-family: roboto;
  font-weight: 400;
  text-align: center;
  line-height: 1.6;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
}

.c0 {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 720px;
}

.c1 {
  line-height: 1.3;
  text-align: center;
  margin-bottom: 0.5rem;
  color: #000000;
  font-family: 'Roboto Flex',sans-serif;
  font-size: 2.625rem;
}

@media screen and (max-width: 767.98px) {
  .c1 {
    font-size: 2rem;
  }
}

<div
    class="c0"
  >
    <h2
      class="c1"
      color="#000000"
      mb="0.5rem"
    >
      Section Title
    </h2>
    <p
      class="c2"
      color="#757575"
      font-family="roboto"
      font-weight="400"
    >
      Section Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`SectionHeader tests should render large SectionHeader in dark mode 1`] = `
<DocumentFragment>
  .c2 {
  font-size: 1.25rem;
  line-height: 1.875rem;
  font-weight: 500;
  font-family: roboto;
  font-weight: 400;
  text-align: center;
  line-height: 1.6;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #CBCBCB;
}

.c0 {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 720px;
  margin-bottom: 3.125rem;
}

.c1 {
  line-height: 1.3;
  text-align: center;
  margin-bottom: 0.5rem;
  color: #F6F6F6;
  font-family: 'Roboto Flex',sans-serif;
  font-size: 3.75rem;
}

@media screen and (max-width: 767.98px) {
  .c1 {
    font-size: 2rem;
  }
}

<div
    class="c0"
  >
    <h2
      class="c1"
      color="#F6F6F6"
      mb="0.5rem"
    >
      Section Title
    </h2>
    <p
      class="c2"
      color="#CBCBCB"
      font-family="roboto"
      font-weight="400"
    >
      Section Text
    </p>
  </div>
</DocumentFragment>
`;
